feat: Implement BicCamera API with proxy support and error handling
- Added BicCameraController for handling product scraping requests.
- Created BicCameraService and its implementation for scraping logic.
- Introduced Proxy and ProxyRoute classes for managing proxy connections.
- Implemented ProxyRoutePool for managing a pool of proxy routes.
- Added HealthController for health check endpoint.
- Created DTOs for request and response handling.
- Implemented global exception handling with detailed error responses.
- Added logging configuration for better traceability.
- Updated .gitignore to include new directories and files.
- Created a sample proxy list file for configuration.