@@ -1,37 +1,44 @@
 package com.mizegret.mps.mps_shared.handler;
 
-import com.mizegret.mps.mps_shared.dto.ErrorResponse;
+import com.mizegret.mps.mps_shared.dtos.ValidationError;
+import com.mizegret.mps.mps_shared.exception.BlockedException;
+import com.mizegret.mps.mps_shared.exception.ExtractFailureException;
+
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.ProblemDetail;
 import org.springframework.lang.NonNull;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.time.OffsetDateTime;
-import java.util.Collections;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler{
 
-    @ExceptionHandler(Exception.class)
     @NonNull
-    public ResponseEntity<ErrorResponse> handleException(Exception e){
-        final ErrorResponse errorResponse = new ErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR,
-                Collections.singletonList("An unexpected error occurred. Please contact support."),
-                OffsetDateTime.now());
-        return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
+    @ExceptionHandler(Exception.class)
+    public ProblemDetail handleException(@NonNull Exception e){
+        return ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR,
+                "An unexpected error occurred. Please contact support.");
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
     @NonNull
-    public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex){
-        final ErrorResponse errorResponse = new ErrorResponse(HttpStatus.BAD_REQUEST,
-                ex.getBindingResult().getFieldErrors().stream()
-                        .map(error -> "Field '%s': %s".formatted(error.getField(), error.getDefaultMessage()))
-                        .collect(Collectors.toList()),
-                OffsetDateTime.now());
-        return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ProblemDetail handleValidationException(@NonNull MethodArgumentNotValidException ex){
+        final ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST,
+                "Validation failed for one or more fields. Please check the request body.");
+        final List<ValidationError> validationErrors = ex.getBindingResult().getFieldErrors().stream()
+                .map(error -> new ValidationError(error.getField(), error.getCode(), error.getDefaultMessage()))
+                .toList();
+        problemDetail.setProperty("errors", validationErrors);
+
+        return problemDetail;
+    }
+
+    @NonNull
+    @ExceptionHandler({BlockedException.class, ExtractFailureException.class})
+    public ProblemDetail handleBadGatewayException(@NonNull RuntimeException ex){
+        return ProblemDetail.forStatusAndDetail(HttpStatus.BAD_GATEWAY, ex.getMessage());
     }
 }
